# graspit_bci

./: .gitignore  CMakeLists.txt  README.md  graspit-core.pro  graspit.pro  graspit_paths.bash  icons.qrc  images.qrc  mk_linux  noncatkin-dependencies.bash  package.xml  protobuf.pri  ros.pri  rpcz.pri  setup_paths.bash  todos.md
cmake/Modules/: FindSoQt.cmake
include/: FitParabola.h  SoArrow.h  SoComplexShape.h  SoRing.h  SoTorquePointer.h  arch.h  bBox.h  barrett.h  bbox_inl.h  body.h  contact.h  contactSetting.h  debug.h  dof.h  dynJoint.h  dynamics.h  eigenGrasp.h  gloveInterface.h  grasp.h  graspRecord.h  graspitApp.h  graspitGUI.h  gws.h  gwsprojection.h  handController.h  humanHand.h  ivmgr.h  jacobian.h  joint.h  kinematicChain.h  lapack_wrappers.h  lmiOptimizer.h  m7.h  m7tool.h  material.h  matvec3D.h  matvecIO.h  maxdet.h  mcGrip.h  mkl_wrappers.h  (+15 more)
include/BCI/: BCIStateMachine.h  bciService.h  onlinePlannerController.h  rosclient.h  state.h  worldController.h
include/BCI/controller_scene/: controller_scene_mgr.h  sprites.h
include/BCI/requests/: cameraOriginStub.h  executeGraspStub.h  graspReachabilityStub.h  objectRecognitionStub.h  optionSelectionStub.h  requestStub.h
include/BCI/states/: activateRefinementState.h  confirmationState.h  executionState.h  graspSelectionState.h  handRotationState.h  objectRecognitionState.h  objectSelectionState.h  onlinePlanningState.h  placementLocationSelectionState.h  stoppedExecutionState.h
include/BCI/utils/: plannerTools.h  uiTools.h  worldElementTools.h
include/EGPlanner/: EGPlannerRenderer.h  egPlanner.h  graspTesterThread.h  guidedPlanner.h  heatmapEnergyCalculator.h  listPlanner.h  loopPlanner.h  onLineGraspInterface.h  onLinePlanner.h  search.h  searchEnergy.h  searchState.h  searchStateImpl.h  searchStateUtils.h  simAnn.h  simAnnPlanner.h  timeTest.h
include/EGPlanner/SearchEnergyCalculators/: contactEnergyCalculator.h  heatmapEnergyCalculator.h  partialViewContactEnergyCalculator.h
include/Planner/: grasp_coordinates.h  grasp_directions.h  grasp_grasps.h  grasp_manager.h  grasp_planner.h  grasp_presenter.h  grasp_preshape.h  grasp_tester.h  grasp_visualization.h
include/Servers/: RenderableProtoDrawer.h  graspitProtobufServer.h  graspitServer.h  rosRPCZClient.h
include/math/: matrix.h
src/: SoArrow.cpp  SoComplexShape.cpp  SoRing.cpp  SoTorquePointer.cpp  SoftContact.h  arch.cpp  bBox.cpp  barrett.cpp  body.cpp  contact.cpp  contactSetting.cpp  dof.cpp  dynJoint.cpp  dynamics.cpp  eigenGrasp.cpp  gloveInterface.cpp  grasp.cpp  graspRecord.cpp  graspitApp.cpp  graspitGUI.cpp  gws.cpp  gwsprojection.cpp  humanHand.cpp  ivmgr.cpp  jacobian.cpp  joint.cpp  kinematicChain.cpp  lmiOptimizer.cpp  m7.cpp  m7tool.cpp  main.cpp  material.cpp  matvec.cpp  matvecIO.cpp  maxdet_src.cpp  mcGrip.cpp  mouse.cpp  mytools.cc  mytools.cpp  pincer.cpp  (+11 more)
src/BCI/: BCIStateMachine.cpp  bciService.cpp  onlinePlannerController.cpp  rosclient.cpp  state.cpp  worldController.cpp
src/BCI/controller_scene/: controller_scene_mgr.cpp  sprites.cpp
src/BCI/requests/: cameraOriginStub.cpp  executeGraspStub.cpp  graspReachabilityStub.cpp  objectRecognitionStub.cpp  optionSelectionStub.cpp
src/BCI/states/: activateRefinementState.cpp  confirmationState.cpp  executionState.cpp  graspSelectionState.cpp  handRotationState.cpp  objectRecognitionState.cpp  objectSelectionState.cpp  onlinePlanningState.cpp  placementLocationSelectionState.cpp  stoppedExecutionState.cpp
src/BCI/utils/: plannerTools.cpp  uiTools.cpp  worldElementTools.cpp
src/Collision/: collisionInterface.cpp  collisionInterface.h  collisionStructures.h
src/Collision/Graspit/: collisionAlgorithms.cpp  collisionAlgorithms.h  collisionAlgorithms_inl.h  collisionModel.cpp  collisionModel.h  graspitCollision.cpp  graspitCollision.h
src/Collision/PQP/: PQPCollision.cpp  PQPCollision.h
src/DBase/: dbaseDlg.cpp  dbaseDlg.h  dbasePlannerDlg.cpp  dbasePlannerDlg.h  dbase_grasp.cpp  dbase_grasp.h  graspit_db_grasp.cpp  graspit_db_grasp.h  graspit_db_model.cpp  graspit_db_model.h  graspit_db_planner.cpp  graspit_db_planner.h
src/DBase/DBPlanner/: aligner.h  caching_aligner.h  caching_features_extractor.h  caching_neighbor_finder.h  database.cpp  database.h  db_manager.h  features_extractor.h  grasp.h  grasp_ranker.h  model.h  neighbor_finder.h  planner.h  qvariant_convert.h  retrieve_features_from_db_functor.h  sql_database_manager.cpp  sql_database_manager.h  training_planner.h
src/EGPlanner/: egPlanner.cpp  graspTesterThread.cpp  guidedPlanner.cpp  heatmapEnergyCalculator.cpp  listPlanner.cpp  loopPlanner.cpp  onLineGraspInterface.cpp  onLinePlanner.cpp  searchEnergy.cpp  searchState.cpp  searchStateImpl.cpp  simAnn.cpp  simAnnPlanner.cpp  timeTest.cpp
src/EGPlanner/SearchEnergyCalculators/: contactEnergyCalculator.cpp  heatmapEnergyCalculator.cpp  partialViewContactEnergyCalculator.cpp
src/Planner/: grasp_coordinates.cpp  grasp_directions.cpp  grasp_grasps.cpp  grasp_manager.cpp  grasp_planner.cpp  grasp_presenter.cpp  grasp_preshape.cpp  grasp_tester.cpp  grasp_visualization.cpp
src/Servers/: RenderableProtoDrawer.cpp  graspitProtobufServer.cpp  graspitServer.cpp  rosRPCZClient.cpp
src/math/: cgal_qp.cpp  cgal_qp.h  matrix.cpp  mosek_qp.cpp  mosek_qp.h
ui/: contactExaminerDlg.h  graspCaptureDlg.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  mainWindow.ui.backup
ui/BCI/: BCIControlWindowBase.ui  bciControlWindow.h  bciWorldView.cpp  bciWorldView.h  bciWorldView.ui  handView.cpp  handView.h  handViewWindow.h
ui/BCI/state_views/: activeRefinementView.cpp  activeRefinementView.h  activeRefinementView.ui  confirmationView.cpp  confirmationView.h  confirmationView.ui  executionView.cpp  executionView.h  executionView.ui  graspSelectionView.cpp  graspSelectionView.h  graspSelectionView.ui  graspView.cpp  graspView.h  (+10 more)
ui/EGPlanner/: egPlannerDlg.cpp  egPlannerDlg.h  egPlannerDlg.ui
ui/GraspViewer/: graspViewerDlg.cpp  graspViewerDlg.h  graspViewerDlg.ui
worlds/: 3objectbarrett.xml  3objectmico.xml  barrett_all_gillette.xml  foundObjects.xml
(+7 files in other folders)
